--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         </activity>
             
         <meta-data android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyDlPYzEIOrcZNA6BgYIhjt9cBfd1ORG530"/>
+            android:value="YOUR_API-KEY"/>
         
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
